# MoonScout

./: .env.example  .gitignore  README.md  app.py  connect_agentverse.py  connect_mailbox.py  pyproject.toml  requirements.txt  test_telegram.py
moonscout/: __init__.py  config.py  database.py  protocols.py
moonscout/agents/: analyst.py  discord_agent.py  historian.py  run_all.py  scout.py  telegram_agent.py
moonscout/ml/: scorer.py  train.py
neurosciout/: __init__.py  config.py  database.py  protocols.py
neurosciout/agents/: analyst.py  discord_agent.py  historian.py  run_all.py  scout.py  telegram_agent.py  x_agent.py
neurosciout/ml/: scorer.py
static/css/: style.css
static/js/: main.js
templates/: index.html
