[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neurosciout"
version = "0.1.0"
description = "Decentralized 6-agent Intelligence Swarm for Solana — MongoDB Atlas Prize Track"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # Fetch.ai multi-agent framework — pinned to exact version for stability
    "uagents==0.24.0",
    # Async MongoDB Atlas driver  (Atlas Prize Track — PC-8)
    "motor>=3.7.1,<4.0",
    # ML scoring layer
    "xgboost>=3.2.0,<4.0",
    # Settings / env var management
    "python-dotenv>=1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # HTTP client for Helius RPC, RugCheck.xyz, Telegram, Discord
    "httpx>=0.27,<1.0",
    # X / Twitter v2 API
    "tweepy>=4.14,<5.0",
    # Solana RPC types / keypair handling
    "solders>=0.21,<1.0",
]

[project.scripts]
neurosciout = "neurosciout.agents.run_all:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    # httpx mock for RPC / social API calls
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["neurosciout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=neurosciout --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["neurosciout"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
