[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moonscout"
version = "0.1.0"
description = "Decentralized 5-agent Intelligence Swarm for Solana — MongoDB Atlas Prize Track"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # Fetch.ai multi-agent framework — pinned to exact version for stability
    "uagents==0.24.0",
    # Async MongoDB Atlas driver  (Atlas Prize Track — PC-8)
    "motor>=3.7.1,<4.0",
    # ML scoring layer
    "xgboost>=3.2.0,<4.0",
    # Settings / env var management
    "python-dotenv>=1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # HTTP client for Helius RPC, RugCheck.xyz, Discord
    "httpx>=0.27,<1.0",
    # Telegram user-account scraper
    "telethon>=1.36,<2.0",
    # Solana RPC types / keypair handling
    "solders>=0.21,<1.0",
]

[project.scripts]
moonscout = "moonscout.agents.run_all:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    # httpx mock for RPC / social API calls
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["moonscout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=moonscout --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["moonscout"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
